# phase_field_fracture_optimal_control

./: CMakeLists.txt  CONTRIBUTING.md  README.md  compare_tests.sh  dope.prm  functionals.h  instat_step_modified_newtonsolver.h  joss_jcp.bib  localfunctional.h  localpde_eta.h  main.cc  my_functions.h  paper.md  run_tests.sh
.github/workflows/: draft-pdf.yml  result_testing.yml
